feat: implement full-stack sales management system with multi-item transactions, inventory integration, and dashboard tracking