@@ -1,6 +1,5 @@
 package com.imane.inventorysystem.service;
 
-import com.imane.inventorysystem.dto.ItemRequest;
 import com.imane.inventorysystem.dto.SaleRequest;
 import com.imane.inventorysystem.dto.SaleResponse;
 import com.imane.inventorysystem.dto.SaleItemResponse;
@@ -10,13 +9,16 @@ import com.imane.inventorysystem.entity.SaleItem;
 import com.imane.inventorysystem.repository.ProductRepository;
 import com.imane.inventorysystem.repository.SaleRepository;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class SaleService {
@@ -28,69 +30,85 @@ public class SaleService {
         this.saleRepository = saleRepository;
         this.productRepository = productRepository;
     }
+@Transactional
+public SaleResponse processSale(SaleRequest request) {
 
-    @Transactional
-    public SaleResponse processSale(SaleRequest request) {
-        if (request.getItems() == null || request.getItems().isEmpty()) {
-            throw new RuntimeException("Sale must contain at least one item");
-        }
-
-        Sale sale = new Sale();
-        sale.setTransactionId("INV-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase());
-        sale.setStatus("COMPLETED");
-
-        List<SaleItem> saleItems = new ArrayList<>();
-        double total = 0;
-
-        for (ItemRequest item : request.getItems()) {
-            if (item.getProductId() == null) {
-                throw new IllegalArgumentException("Product ID must not be null");
-            }
-            Product product = productRepository.findById(item.getProductId())
-                    .orElseThrow(() -> new IllegalArgumentException("Product not found with ID: " + item.getProductId()));
-
-            if (product.getQuantity() < item.getQuantity()) {
-                throw new IllegalArgumentException("Insufficient stock for product: " + product.getName() + 
-                                          " (Available: " + product.getQuantity() + ")");
-            }
-
-            // Reduce stock
-            product.setQuantity(product.getQuantity() - item.getQuantity());
-            productRepository.save(product);
-
-            // Create sale item
-            SaleItem saleItem = new SaleItem();
-            saleItem.setProduct(product);
-            saleItem.setQuantity(item.getQuantity());
-            saleItem.setPrice(product.getSellPrice().doubleValue());
-            saleItem.setSale(sale);
-
-            saleItems.add(saleItem);
-            total += saleItem.getPrice() * item.getQuantity();
-        }
-
-        sale.setItems(saleItems);
-        sale.setTotalAmount(total);
-
-        Sale savedSale = saleRepository.save(sale);
-        return mapToResponse(savedSale);
+    if (request.getItems() == null || request.getItems().isEmpty()) {
+        throw new IllegalArgumentException("Sale must contain at least one item");
     }
 
-    public List<SaleResponse> getAllSales() {
-        return saleRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    Sale sale = new Sale();
+    sale.setTransactionId(
+            "TRX-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase()
+    );
+    sale.setStatus("COMPLETED");
+    sale.setCreatedAt(LocalDateTime.now());
+
+    List<SaleItem> items = new ArrayList<>();
+    BigDecimal totalAmount = BigDecimal.ZERO;
+
+    for (SaleRequest.ItemRequest itemReq : request.getItems()) {
+
+        Product product = productRepository.findById(itemReq.getProductId())
+                .orElseThrow(() ->
+                        new IllegalArgumentException(
+                                "Product not found: " + itemReq.getProductId()
+                        )
+                );
+
+        if (product.getQuantity() < itemReq.getQuantity()) {
+            throw new IllegalArgumentException(
+                    "Insufficient stock for product: " + product.getName()
+            );
+        }
+
+        // Update stock
+        product.setQuantity(product.getQuantity() - itemReq.getQuantity());
+        productRepository.save(product);
+
+        // Create sale item
+        SaleItem item = new SaleItem();
+        item.setSale(sale);
+        item.setProduct(product);
+        item.setQuantity(itemReq.getQuantity());
+        item.setPrice(product.getSellPrice());
+
+        items.add(item);
+
+        // Calculate total
+        BigDecimal lineTotal =
+                product.getSellPrice()
+                        .multiply(BigDecimal.valueOf(itemReq.getQuantity()));
+
+        totalAmount = totalAmount.add(lineTotal);
     }
 
-    public Double getTotalRevenue() {
-        Double revenue = saleRepository.getTotalRevenue();
-        return revenue != null ? revenue : 0.0;
+    // Attach items to sale
+    sale.setItems(items);
+
+    for (SaleItem item : items) {
+        item.setSale(sale);
+    }
+
+    sale.setTotalAmount(totalAmount);
+
+    Sale savedSale = saleRepository.save(sale);
+
+    return mapToResponse(savedSale);
+}
+    public Page<SaleResponse> getAllSales(String search, String status, LocalDateTime start, LocalDateTime end, Pageable pageable) {
+        return saleRepository.findWithFilters(search, status, start, end, pageable)
+                .map(this::mapToResponse);
+    }
+
+    public BigDecimal getTotalRevenue() {
+        return saleRepository.getTotalRevenue();
     }
 
     @Transactional
     public void deleteSale(Long id) {
         Sale sale = saleRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Sale not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Sale not found"));
 
         // Restore stock
         for (SaleItem item : sale.getItems()) {
@@ -117,16 +135,18 @@ public class SaleService {
                 SaleItemResponse itemRes = new SaleItemResponse();
                 itemRes.setId(item.getId());
                 itemRes.setQuantity(item.getQuantity());
-                itemRes.setPrice(item.getPrice());
-                itemRes.setSubtotal(item.getPrice() * item.getQuantity());
+                itemRes.setUnitPrice(item.getPrice());
+                if (item.getPrice() != null && item.getQuantity() != null) {
+                    itemRes.setSubtotal(item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity())));
+                }
                 if (item.getProduct() != null) {
                     itemRes.setProductId(item.getProduct().getId());
                     itemRes.setProductName(item.getProduct().getName());
                 }
                 return itemRes;
-            }).collect(Collectors.toList()));
+            }).toList());
         }
         
         return res;
     }
-}
+}
